[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dscan"
version = "0.1.0"
description = "Passive domain OSINT — RDAP/WHOIS, DNS, Cloudflare, abuse contacts, TLS, change tracking."
requires-python = ">=3.9"
dependencies = [
    "dnspython>=2.6",
    "httpx>=0.27",
    "rich>=13.7",
    "cryptography>=42.0",
]

[project.scripts]
dscan = "dscan.cli:main"

[tool.setuptools]
packages = ["dscan"]
